--- a/wiki/MCRAndroidApplication.wiki
+++ b/wiki/MCRAndroidApplication.wiki
@@ -4,7 +4,7 @@ Overview of the Android application part of the project
 This section is for people who are interested in developing an Android application.
 Based on our admittedly limited understanding of Android development:
  * The activity is the main function that is called when the application starts
- * The preview is the camera preview box
+ * The preview is the surface that contains the camera preview box
    * It holds the camera as well as displays the camera preview
    * A function that takes the picture is called when the preview surface is touched
  * The handler is created solely to get messages from the worker thread, this allows us to have a separate thread for work and display
@@ -12,6 +12,7 @@ Based on our admittedly limited understanding of Android development:
 
 == Relevant Links ==
 [http://developer.android.com/index.html Android Developers]
+
 [http://marakana.com/forums/android/android_examples/39.html Android Examples - Camera]
 
 = Details =
